Fix alignment of brand image on mobile screens

--- a/_sass/quiet_comic/components.scss
+++ b/_sass/quiet_comic/components.scss
@@ -54,7 +54,7 @@ header {
 
   @media (max-width: $break-md) {
     .nav-home-button {
-      text-align: center;
+      justify-content: center;
     }
 
     .basic-nav {
